bindings/c/whiteout_mdx.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MdxExtent whiteout_MdxExtent;
typedef struct whiteout_MdxGeoset whiteout_MdxGeoset;
/* ── MdxGeoset ─────────────────────────────────────────────── */

/* Mesh geometry */
/*  */
/* A geoset is a complete mesh with vertices, normals, faces, and skinning data. Models can have multiple geosets with different materials or LOD levels. */
whiteout_MdxGeoset* whiteout_mdx_MdxGeoset_new(void);
void whiteout_mdx_MdxGeoset_delete(whiteout_MdxGeoset* self);
/* Vertex positions */
size_t whiteout_mdx_MdxGeoset_get_vertexPositions_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_vertexPositions(whiteout_MdxGeoset* self, size_t count);
const float* whiteout_mdx_MdxGeoset_get_vertexPositions_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_vertexPositions(whiteout_MdxGeoset* self, const float* data, size_t count);
/* Vertex normals */
size_t whiteout_mdx_MdxGeoset_get_vertexNormals_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_vertexNormals(whiteout_MdxGeoset* self, size_t count);
const float* whiteout_mdx_MdxGeoset_get_vertexNormals_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_vertexNormals(whiteout_MdxGeoset* self, const float* data, size_t count);
/* Face type groups (4 = triangles) */
size_t whiteout_mdx_MdxGeoset_get_faceTypeGroups_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_faceTypeGroups(whiteout_MdxGeoset* self, size_t count);
const uint32_t* whiteout_mdx_MdxGeoset_get_faceTypeGroups_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_faceTypeGroups(whiteout_MdxGeoset* self, const uint32_t* data, size_t count);
/* Number of indices per group */
size_t whiteout_mdx_MdxGeoset_get_faceGroups_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_faceGroups(whiteout_MdxGeoset* self, size_t count);
const uint32_t* whiteout_mdx_MdxGeoset_get_faceGroups_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_faceGroups(whiteout_MdxGeoset* self, const uint32_t* data, size_t count);
/* Vertex indices (triangles) */
size_t whiteout_mdx_MdxGeoset_get_faces_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_faces(whiteout_MdxGeoset* self, size_t count);
const uint16_t* whiteout_mdx_MdxGeoset_get_faces_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_faces(whiteout_MdxGeoset* self, const uint16_t* data, size_t count);
/* Bone groups per vertex */
size_t whiteout_mdx_MdxGeoset_get_vertexGroups_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_vertexGroups(whiteout_MdxGeoset* self, size_t count);
const uint8_t* whiteout_mdx_MdxGeoset_get_vertexGroups_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_vertexGroups(whiteout_MdxGeoset* self, const uint8_t* data, size_t count);
/* Number of matrices per group */
size_t whiteout_mdx_MdxGeoset_get_matrixGroups_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_matrixGroups(whiteout_MdxGeoset* self, size_t count);
const uint32_t* whiteout_mdx_MdxGeoset_get_matrixGroups_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_matrixGroups(whiteout_MdxGeoset* self, const uint32_t* data, size_t count);
/* Bone indices */
size_t whiteout_mdx_MdxGeoset_get_matrixIndices_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_matrixIndices(whiteout_MdxGeoset* self, size_t count);
const uint32_t* whiteout_mdx_MdxGeoset_get_matrixIndices_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_matrixIndices(whiteout_MdxGeoset* self, const uint32_t* data, size_t count);
/* Material index */
uint32_t whiteout_mdx_MdxGeoset_get_materialId(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_materialId(whiteout_MdxGeoset* self, uint32_t value);
/* Selection group (for editor) */
uint32_t whiteout_mdx_MdxGeoset_get_selectionGroup(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_selectionGroup(whiteout_MdxGeoset* self, uint32_t value);
/* Selection flags */
uint32_t whiteout_mdx_MdxGeoset_get_selectionFlags(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_selectionFlags(whiteout_MdxGeoset* self, uint32_t value);
/* Level of detail index */
uint32_t whiteout_mdx_MdxGeoset_get_lod(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_lod(whiteout_MdxGeoset* self, uint32_t value);
/* LOD name */
whiteout_CString whiteout_mdx_MdxGeoset_get_lodName(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_lodName(whiteout_MdxGeoset* self, const char* value);
/* Bounding volume */
whiteout_MdxExtent* whiteout_mdx_MdxGeoset_get_extent(whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_extent(whiteout_MdxGeoset* self, const whiteout_MdxExtent* value);
/* Per-sequence bounding volumes */
size_t whiteout_mdx_MdxGeoset_get_sequenceExtents_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_sequenceExtents(whiteout_MdxGeoset* self, size_t count);
whiteout_MdxExtent* whiteout_mdx_MdxGeoset_get_sequenceExtents_at(whiteout_MdxGeoset* self, size_t index);
/* Tangent vectors (for normal mapping) */
size_t whiteout_mdx_MdxGeoset_get_tangents_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_tangents(whiteout_MdxGeoset* self, size_t count);
const float* whiteout_mdx_MdxGeoset_get_tangents_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_tangents(whiteout_MdxGeoset* self, const float* data, size_t count);
/* Bone indices and weights */
size_t whiteout_mdx_MdxGeoset_get_skinData_count(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_resize_skinData(whiteout_MdxGeoset* self, size_t count);
const uint8_t* whiteout_mdx_MdxGeoset_get_skinData_data(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_assign_skinData(whiteout_MdxGeoset* self, const uint8_t* data, size_t count);
/* UV coordinates (multiple sets) */
size_t whiteout_mdx_MdxGeoset_get_textureCoordinateSets_count(const whiteout_MdxGeoset* self);