bindings/java/src/main/java/whiteout/mdx/internal/Native.java


    // -- MdxGeoset --
    public static final MethodHandle whiteout_mdx_MdxGeoset_new = find(
        "whiteout_mdx_MdxGeoset_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_delete = find(
        "whiteout_mdx_MdxGeoset_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_vertexPositions_count = find("whiteout_mdx_MdxGeoset_get_vertexPositions_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_vertexPositions = find("whiteout_mdx_MdxGeoset_resize_vertexPositions", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_vertexPositions_data = find("whiteout_mdx_MdxGeoset_get_vertexPositions_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_vertexPositions = find("whiteout_mdx_MdxGeoset_assign_vertexPositions", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_vertexNormals_count = find("whiteout_mdx_MdxGeoset_get_vertexNormals_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_vertexNormals = find("whiteout_mdx_MdxGeoset_resize_vertexNormals", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_vertexNormals_data = find("whiteout_mdx_MdxGeoset_get_vertexNormals_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_vertexNormals = find("whiteout_mdx_MdxGeoset_assign_vertexNormals", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_faceTypeGroups_count = find("whiteout_mdx_MdxGeoset_get_faceTypeGroups_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_faceTypeGroups = find("whiteout_mdx_MdxGeoset_resize_faceTypeGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_faceTypeGroups_data = find("whiteout_mdx_MdxGeoset_get_faceTypeGroups_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_faceTypeGroups = find("whiteout_mdx_MdxGeoset_assign_faceTypeGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_faceGroups_count = find("whiteout_mdx_MdxGeoset_get_faceGroups_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_faceGroups = find("whiteout_mdx_MdxGeoset_resize_faceGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_faceGroups_data = find("whiteout_mdx_MdxGeoset_get_faceGroups_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_faceGroups = find("whiteout_mdx_MdxGeoset_assign_faceGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_faces_count = find("whiteout_mdx_MdxGeoset_get_faces_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_faces = find("whiteout_mdx_MdxGeoset_resize_faces", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_faces_data = find("whiteout_mdx_MdxGeoset_get_faces_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_faces = find("whiteout_mdx_MdxGeoset_assign_faces", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_vertexGroups_count = find("whiteout_mdx_MdxGeoset_get_vertexGroups_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_vertexGroups = find("whiteout_mdx_MdxGeoset_resize_vertexGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_vertexGroups_data = find("whiteout_mdx_MdxGeoset_get_vertexGroups_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_vertexGroups = find("whiteout_mdx_MdxGeoset_assign_vertexGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_matrixGroups_count = find("whiteout_mdx_MdxGeoset_get_matrixGroups_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_matrixGroups = find("whiteout_mdx_MdxGeoset_resize_matrixGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_matrixGroups_data = find("whiteout_mdx_MdxGeoset_get_matrixGroups_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_matrixGroups = find("whiteout_mdx_MdxGeoset_assign_matrixGroups", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_matrixIndices_count = find("whiteout_mdx_MdxGeoset_get_matrixIndices_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_matrixIndices = find("whiteout_mdx_MdxGeoset_resize_matrixIndices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_matrixIndices_data = find("whiteout_mdx_MdxGeoset_get_matrixIndices_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_matrixIndices = find("whiteout_mdx_MdxGeoset_assign_matrixIndices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_materialId = find("whiteout_mdx_MdxGeoset_get_materialId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_set_materialId = find("whiteout_mdx_MdxGeoset_set_materialId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_selectionGroup = find("whiteout_mdx_MdxGeoset_get_selectionGroup", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_set_selectionGroup = find("whiteout_mdx_MdxGeoset_set_selectionGroup", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_selectionFlags = find("whiteout_mdx_MdxGeoset_get_selectionFlags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_set_selectionFlags = find("whiteout_mdx_MdxGeoset_set_selectionFlags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_lod = find("whiteout_mdx_MdxGeoset_get_lod", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_set_lod = find("whiteout_mdx_MdxGeoset_set_lod", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_lodName = find("whiteout_mdx_MdxGeoset_get_lodName", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_set_lodName = find("whiteout_mdx_MdxGeoset_set_lodName", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_extent = find("whiteout_mdx_MdxGeoset_get_extent", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_set_extent = find("whiteout_mdx_MdxGeoset_set_extent", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_sequenceExtents_count = find("whiteout_mdx_MdxGeoset_get_sequenceExtents_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_sequenceExtents = find("whiteout_mdx_MdxGeoset_resize_sequenceExtents", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_sequenceExtents_at = find("whiteout_mdx_MdxGeoset_get_sequenceExtents_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_tangents_count = find("whiteout_mdx_MdxGeoset_get_tangents_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_tangents = find("whiteout_mdx_MdxGeoset_resize_tangents", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_tangents_data = find("whiteout_mdx_MdxGeoset_get_tangents_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_tangents = find("whiteout_mdx_MdxGeoset_assign_tangents", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_skinData_count = find("whiteout_mdx_MdxGeoset_get_skinData_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_skinData = find("whiteout_mdx_MdxGeoset_resize_skinData", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_skinData_data = find("whiteout_mdx_MdxGeoset_get_skinData_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_skinData = find("whiteout_mdx_MdxGeoset_assign_skinData", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_textureCoordinateSets_count = find("whiteout_mdx_MdxGeoset_get_textureCoordinateSets_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
